--- a/index.html
+++ b/index.html
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link href="css/style.css" rel="stylesheet" type="text/css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Next Step - Login</title>
+  <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <div class="background">
-        <div class="login-container">
-            <img src="images/logo2.png" alt="Logo" class="logo2">
-            <div class="input-group">
-                <label for="email">Login</label>
-                <input type="email" id="email" placeholder="Example@mail.com" required>
-            </div>
-            <div class="input-group">
-                <label for="password">Password</label>
-                <input type="password" id="password" placeholder="Password" required>
-            </div>
-            <button class="login-button" onclick="login()">Enter</button>
-            <p class="signup-link">Don’t have an account?</p>
-        </div>
+  <div class="login-container">
+    <div class="app-logo">
+      <img src="images/logo2.png" alt="App Logo" class="logo">
     </div>
-    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-    <script src="js/index.js"></script>
+    <form class="login-form">
+      <div class="input-group">
+        <input type="text" placeholder="Username" required>
+        <span class="icon">&#128100;</span>
+      </div>
+      <div class="input-group">
+        <input type="password" placeholder="Password" required>
+        <span class="icon">&#128274;</span>
+      </div>
+      <div class="form-options">
+        <label>
+          <input type="checkbox"> Remember me?
+        </label>
+        <a href="#" class="forgot-password">Forgot Password?</a>
+      </div>
+      <button type="button" class="login-button">Login</button>
+    </form>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+  <script src="js/index.js"></script>
 </body>
 </html>
